--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
 		"@sveltejs/adapter-vercel": "^5.5.2",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"autoprefixer": "^10.4.20",
-		"daisyui": "^4.12.23",
+		"daisyui": "^5.0.27",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
@@ -31,11 +30,13 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-dnd-action": "^0.9.57",
-		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"@nostr-dev-kit/ndk": "^2.11.0"
+		"@nostr-dev-kit/ndk": "^2.11.0",
+		"@tailwindcss/vite": "^4.1.4",
+		"carta-md": "^4.9.0",
+		"tailwindcss": "^4.1.4"
 	}
 }
